<resources>
    <string name="app_name">Sample</string>
    <string name="recycler_view_demo">Recycler View Demo</string>
    <string name="complex_recycler_view_demo">Complex Recycler View Demo</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="text_speech_demo">Text-Speech Demo</string>

     <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">Settings</string>
    <string name="coordinate_layout_demo">Coordinate Layout Demo</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="bottom_bar_demo">Bottom Bar Demo</string>
    <string name="sample_layouts">Sample Layouts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_layout">Tab Fragment Layout</string>
</resources>
