<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">
    <!--<include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"></include>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view_button"
                android:text="@string/recycler_view_demo"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/complex_recycler_view_button"
                android:text="@string/complex_recycler_view_demo"
                android:layout_below="@+id/recycler_view_button"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/coordinate_layout"
                android:text="@string/coordinate_layout_demo"
                android:layout_below="@+id/complex_recycler_view_button"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_speech_button"
                android:text="@string/text_speech_demo"
                android:layout_below="@+id/coordinate_layout"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emergancy_call_button"
                android:text="@string/emergency_call"
                android:layout_below="@+id/text_speech_button"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bottom_menu_bar_button"
                android:text="@string/bottom_bar_demo"
                android:layout_below="@+id/emergancy_call_button"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sample_layouts_button"
                android:text="@string/sample_layouts"
                android:layout_below="@+id/bottom_menu_bar_button"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tab_layout_button"
                android:text="@string/tab_layout"
                android:layout_below="@+id/bottom_menu_bar_button"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alert_list_button"
                android:text="Alert"
                android:layout_below="@+id/tab_layout_button"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alert_detail_button"
                android:text="Alert2"
                android:layout_below="@+id/alert_list_button"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/parallel_asynctask"
                android:text="Parallel AsyncTask"
                android:layout_below="@+id/alert_detail_button"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/intentservice_button"
                android:text="Intent Service"
                android:layout_below="@+id/parallel_asynctask"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/internet_api_button"
                android:text="Internet APIS"
                android:layout_below="@+id/intentservice_button"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/background_service_button"
                android:text="Background Service"
                android:layout_below="@+id/internet_api_button"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
